Published multiple files

--- a/src/site/notes/02 小说/03 dc/01 已完成/SCP-9391 超级英雄漫画.md
+++ b/src/site/notes/02 小说/03 dc/01 已完成/SCP-9391 超级英雄漫画.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"permalink":"/02 小说/03 dc/01 已完成/SCP-9391 超级英雄漫画/"}
+{"dg-publish":true,"permalink":"/02 小说/03 dc/01 已完成/SCP-9391 超级英雄漫画/","noteIcon":""}
 ---
 
 阅读须知：
