--- a/src/site/notes/02 小说/03 dc/01 已完成/【不义观影】你叫什么超人政权啊干脆改名叫小丑政权吧.md
+++ b/src/site/notes/02 小说/03 dc/01 已完成/【不义观影】你叫什么超人政权啊干脆改名叫小丑政权吧.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"permalink":"/02 小说/03 dc/01 已完成/【不义观影】你叫什么超人政权啊干脆改名叫小丑政权吧/"}
+{"dg-publish":true,"permalink":"/02 小说/03 dc/01 已完成/【不义观影】你叫什么超人政权啊干脆改名叫小丑政权吧/","noteIcon":""}
 ---
 
 
