--- a/src/site/notes/02 小说/03 dc/01 已完成/【正联】关于群聊的二三事.md
+++ b/src/site/notes/02 小说/03 dc/01 已完成/【正联】关于群聊的二三事.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"permalink":"/02 小说/03 dc/01 已完成/【正联】关于群聊的二三事/"}
+{"dg-publish":true,"permalink":"/02 小说/03 dc/01 已完成/【正联】关于群聊的二三事/","noteIcon":""}
 ---
 
 正义联盟有个群聊，保密线路，当然。英雄们平时闲的没事干的时候会水群，从这点上来说他们和大部分普通人没啥区别。
