--- a/src/site/notes/02 小说/03 dc/01 已完成/【红子超蝙超】我这一生都是坚定不移的唯物主义者.md
+++ b/src/site/notes/02 小说/03 dc/01 已完成/【红子超蝙超】我这一生都是坚定不移的唯物主义者.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"permalink":"/02 小说/03 dc/01 已完成/【红子超蝙超】我这一生都是坚定不移的唯物主义者/"}
+{"dg-publish":true,"permalink":"/02 小说/03 dc/01 已完成/【红子超蝙超】我这一生都是坚定不移的唯物主义者/","noteIcon":""}
 ---
 
 
