--- a/src/site/notes/02 小说/03 dc/01 已完成/【蝙中心】蝙蝠侠你的异世界同位体是否有点问题.md
+++ b/src/site/notes/02 小说/03 dc/01 已完成/【蝙中心】蝙蝠侠你的异世界同位体是否有点问题.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"permalink":"/02 小说/03 dc/01 已完成/【蝙中心】蝙蝠侠你的异世界同位体是否有点问题/"}
+{"dg-publish":true,"permalink":"/02 小说/03 dc/01 已完成/【蝙中心】蝙蝠侠你的异世界同位体是否有点问题/","noteIcon":""}
 ---
 
 
