--- a/src/site/notes/02 小说/03 dc/01 已完成/【蝙绿】惩罚我.md
+++ b/src/site/notes/02 小说/03 dc/01 已完成/【蝙绿】惩罚我.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"permalink":"/02 小说/03 dc/01 已完成/【蝙绿】惩罚我/"}
+{"dg-publish":true,"permalink":"/02 小说/03 dc/01 已完成/【蝙绿】惩罚我/","noteIcon":""}
 ---
 
 新52正联刊的cp安排好离谱，大超和女侠在一起这种事情补药啊！而且时机也很阴间啊啊啊啊啊啊啊！
