--- a/src/site/notes/02 小说/03 dc/01 已完成/【蝙蝠家族】罗宾与知更鸟.md
+++ b/src/site/notes/02 小说/03 dc/01 已完成/【蝙蝠家族】罗宾与知更鸟.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"permalink":"/02 小说/03 dc/01 已完成/【蝙蝠家族】罗宾与知更鸟/"}
+{"dg-publish":true,"permalink":"/02 小说/03 dc/01 已完成/【蝙蝠家族】罗宾与知更鸟/","noteIcon":""}
 ---
 
 看到一张可爱芒果小鸟的蝙蝠家的图，不行了太可爱了是我可以盯着傻乐十分钟的那种可爱！
