--- a/src/site/notes/02 小说/03 dc/01 已完成/【超蝙】超人，但女频女主.md
+++ b/src/site/notes/02 小说/03 dc/01 已完成/【超蝙】超人，但女频女主.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"permalink":"/02 小说/03 dc/01 已完成/【超蝙】超人，但女频女主/"}
+{"dg-publish":true,"permalink":"/02 小说/03 dc/01 已完成/【超蝙】超人，但女频女主/","noteIcon":""}
 ---
 
 
