--- a/src/site/notes/02 小说/03 dc/01 已完成/【超蝙超】那个可怕的哥谭阔佬.md
+++ b/src/site/notes/02 小说/03 dc/01 已完成/【超蝙超】那个可怕的哥谭阔佬.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"permalink":"/02 小说/03 dc/01 已完成/【超蝙超】那个可怕的哥谭阔佬/"}
+{"dg-publish":true,"permalink":"/02 小说/03 dc/01 已完成/【超蝙超】那个可怕的哥谭阔佬/","noteIcon":""}
 ---
 
 之前lof刷到一个笑话，大意是卢瑟绑了超人之后要把他送给全美国最阴暗最邪恶玩最花的花花公子当玩物，铺垫一堆之后卢瑟表示：我要把你送给布鲁斯·韦恩。
