--- a/src/site/notes/02 小说/03 dc/02 进行中/《新蝙蝠侠》.md
+++ b/src/site/notes/02 小说/03 dc/02 进行中/《新蝙蝠侠》.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"permalink":"/02 小说/03 dc/02 进行中/《新蝙蝠侠》/"}
+{"dg-publish":true,"permalink":"/02 小说/03 dc/02 进行中/《新蝙蝠侠》/","noteIcon":""}
 ---
 
 之前看完新蝙之后的感受就是，这个虚无主义大爆发的蝙蝠看起来既充满了圣性……又很菜。他首先跟阿福大吵一架，然后忙活了将近三个小时，不仅要救的该救的人一个都没救下来，阿福还进医院了，哥谭还被水淹了，最后老婆还跑了，你这三个小时除了把谜语人送进阿卡姆的这个主线任务之外其他支线任务全失败了啊（）
