--- a/src/site/notes/02 小说/03 dc/02 进行中/【游戏正联】关于超英模拟器.md
+++ b/src/site/notes/02 小说/03 dc/02 进行中/【游戏正联】关于超英模拟器.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"permalink":"/02 小说/03 dc/02 进行中/【游戏正联】关于超英模拟器/"}
+{"dg-publish":true,"permalink":"/02 小说/03 dc/02 进行中/【游戏正联】关于超英模拟器/","noteIcon":""}
 ---
 
 这其实是个在艰难思考怎么让正常设定下的蝙丑和平谈恋爱并he的时候想到的脑洞——本来我只是觉得玩家蝙试图和NPC丑谈恋爱然后发了一堆同人图抗议死活不开恋爱线的官方，但完全没想到官方就是蝙蝠侠本人所以导致老爷猝不及防被一堆同人创了个半死的场景很有趣……
