--- a/src/site/notes/02 小说/03 dc/02 进行中/【玩家正联】非人之物/【玩家正联】非人之物.md
+++ b/src/site/notes/02 小说/03 dc/02 进行中/【玩家正联】非人之物/【玩家正联】非人之物.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"permalink":"/02 小说/03 dc/02 进行中/【玩家正联】非人之物/【玩家正联】非人之物/"}
+{"dg-publish":true,"permalink":"/02 小说/03 dc/02 进行中/【玩家正联】非人之物/【玩家正联】非人之物/","noteIcon":""}
 ---
 
 
