--- a/src/site/notes/02 小说/03 dc/02 进行中/【蝙中心】哥谭观察日记.md
+++ b/src/site/notes/02 小说/03 dc/02 进行中/【蝙中心】哥谭观察日记.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"permalink":"/02 小说/03 dc/02 进行中/【蝙中心】哥谭观察日记/"}
+{"dg-publish":true,"permalink":"/02 小说/03 dc/02 进行中/【蝙中心】哥谭观察日记/","noteIcon":""}
 ---
 
 突然想起来一个多月前的一条评论。虽然这事的根本原因是我们双方有一点小误会，但是那条评论还是给我留下了非常深刻的印象。
