--- a/src/site/notes/02 小说/03 dc/02 进行中/【蝙右】所有潜在的可能性（圆舞曲重置）.md
+++ b/src/site/notes/02 小说/03 dc/02 进行中/【蝙右】所有潜在的可能性（圆舞曲重置）.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"permalink":"/02 小说/03 dc/02 进行中/【蝙右】所有潜在的可能性（圆舞曲重置）/"}
+{"dg-publish":true,"permalink":"/02 小说/03 dc/02 进行中/【蝙右】所有潜在的可能性（圆舞曲重置）/","noteIcon":""}
 ---
 
 主线剧情上其实没什么特别大的改变，依然是领主蝙穿越，变动比较大的是领主们的设定。所以你们依然能看到布蝙和超蝙，顺带这次我还往里面塞了鸟蝙，虽然这三个关系里面右边的“蝙”并不是同一个人。
