--- a/src/site/notes/02 小说/03 dc/02 进行中/【领主】为了避免地球爆炸，超人将以领主形态出击.md
+++ b/src/site/notes/02 小说/03 dc/02 进行中/【领主】为了避免地球爆炸，超人将以领主形态出击.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"permalink":"/02 小说/03 dc/02 进行中/【领主】为了避免地球爆炸，超人将以领主形态出击/"}
+{"dg-publish":true,"permalink":"/02 小说/03 dc/02 进行中/【领主】为了避免地球爆炸，超人将以领主形态出击/","noteIcon":""}
 ---
 
 
