--- a/src/site/notes/02 小说/03 dc/01 已完成/【不义】一次内部训练引发的外交事故.md
+++ b/src/site/notes/02 小说/03 dc/01 已完成/【不义】一次内部训练引发的外交事故.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"permalink":"/02 小说/03 dc/01 已完成/【不义】一次内部训练引发的外交事故/"}
+{"dg-publish":true,"permalink":"/02 小说/03 dc/01 已完成/【不义】一次内部训练引发的外交事故/","noteIcon":""}
 ---
 
 Summary：就，见标题（）
