--- a/src/site/notes/02 小说/03 dc/01 已完成/【不义蝙】一次重生.md
+++ b/src/site/notes/02 小说/03 dc/01 已完成/【不义蝙】一次重生.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"permalink":"/02 小说/03 dc/01 已完成/【不义蝙】一次重生/"}
+{"dg-publish":true,"permalink":"/02 小说/03 dc/01 已完成/【不义蝙】一次重生/","noteIcon":""}
 ---
 
 ## 警告
