--- a/src/site/notes/02 小说/03 dc/01 已完成/【正联】乐子联盟.jpgᕕ( ᐛ )ᕗ.md
+++ b/src/site/notes/02 小说/03 dc/01 已完成/【正联】乐子联盟.jpgᕕ( ᐛ )ᕗ.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"permalink":"/02 小说/03 dc/01 已完成/【正联】乐子联盟.jpgᕕ( ᐛ )ᕗ/"}
+{"dg-publish":true,"permalink":"/02 小说/03 dc/01 已完成/【正联】乐子联盟.jpgᕕ( ᐛ )ᕗ/","noteIcon":""}
 ---
 
 
