--- a/src/site/notes/02 小说/03 dc/01 已完成/【联盟灌水区】如果正义联盟突然开始无差别杀人，需要多久才能被发现？.md
+++ b/src/site/notes/02 小说/03 dc/01 已完成/【联盟灌水区】如果正义联盟突然开始无差别杀人，需要多久才能被发现？.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"permalink":"/02 小说/03 dc/01 已完成/【联盟灌水区】如果正义联盟突然开始无差别杀人，需要多久才能被发现？/"}
+{"dg-publish":true,"permalink":"/02 小说/03 dc/01 已完成/【联盟灌水区】如果正义联盟突然开始无差别杀人，需要多久才能被发现？/","noteIcon":""}
 ---
 
 ## 彩蛋
