--- a/src/site/notes/02 小说/03 dc/01 已完成/【蝙右】圆舞曲.md
+++ b/src/site/notes/02 小说/03 dc/01 已完成/【蝙右】圆舞曲.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"permalink":"/02 小说/03 dc/01 已完成/【蝙右】圆舞曲/"}
+{"dg-publish":true,"permalink":"/02 小说/03 dc/01 已完成/【蝙右】圆舞曲/","noteIcon":""}
 ---
 
 summary：来吃口布蝙吧我什么都不会做的！（？）
