--- a/src/site/notes/02 小说/03 dc/01 已完成/【蝙莱超】请安然步入这宁谧的长夜.md
+++ b/src/site/notes/02 小说/03 dc/01 已完成/【蝙莱超】请安然步入这宁谧的长夜.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"permalink":"/02 小说/03 dc/01 已完成/【蝙莱超】请安然步入这宁谧的长夜/"}
+{"dg-publish":true,"permalink":"/02 小说/03 dc/01 已完成/【蝙莱超】请安然步入这宁谧的长夜/","noteIcon":""}
 ---
 
 
