--- a/src/site/notes/02 小说/03 dc/01 已完成/【超蝙超】一个最大危机是总有人被变成猫的正义联盟.md
+++ b/src/site/notes/02 小说/03 dc/01 已完成/【超蝙超】一个最大危机是总有人被变成猫的正义联盟.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"permalink":"/02 小说/03 dc/01 已完成/【超蝙超】一个最大危机是总有人被变成猫的正义联盟/"}
+{"dg-publish":true,"permalink":"/02 小说/03 dc/01 已完成/【超蝙超】一个最大危机是总有人被变成猫的正义联盟/","noteIcon":""}
 ---
 
 ## 太好了顾问变成猫了我们完蛋了
