--- a/src/site/notes/02 小说/03 dc/01 已完成/关于“蝙蝠侠”及其衍生集群“蝙蝠家族”的观察报告.md
+++ b/src/site/notes/02 小说/03 dc/01 已完成/关于“蝙蝠侠”及其衍生集群“蝙蝠家族”的观察报告.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"permalink":"/02 小说/03 dc/01 已完成/关于“蝙蝠侠”及其衍生集群“蝙蝠家族”的观察报告/"}
+{"dg-publish":true,"permalink":"/02 小说/03 dc/01 已完成/关于“蝙蝠侠”及其衍生集群“蝙蝠家族”的观察报告/","noteIcon":""}
 ---
 
 这一切是如何发生的呢？
