--- a/src/site/notes/02 小说/03 dc/02 进行中/【超蝙】哇，心软的神！.md
+++ b/src/site/notes/02 小说/03 dc/02 进行中/【超蝙】哇，心软的神！.md
@@ -1,5 +1,5 @@
 ---
-{"dg-publish":true,"permalink":"/02 小说/03 dc/02 进行中/【超蝙】哇，心软的神！/"}
+{"dg-publish":true,"permalink":"/02 小说/03 dc/02 进行中/【超蝙】哇，心软的神！/","noteIcon":""}
 ---
 
 正文写太多了写个东西嗨一下。
