Published multiple files

--- a/src/site/notes/00 草稿箱/【蝙蝠乙女】当蝙蝠侠能看到你对他的好感度-2.md
+++ b/src/site/notes/00 草稿箱/【蝙蝠乙女】当蝙蝠侠能看到你对他的好感度-2.md
@@ -496,9 +496,9 @@
 
 蝙蝠洞里，屏幕的光映在布鲁斯深邃的眼眸中。他看着你记录时微微蹙起的眉心，看着你指尖在屏幕屏幕上流畅的滑动，看着那抹短暂浮现又迅速收敛的疲惫，以及最后归于沉静专注的侧影。
 
-这已经是几天前的监控录像了，但这同样是你的日常工作。每当你值白班的时候，布鲁斯就总能看到许多这样的监控——值夜班的时候看到的场景则像他今晚看到的实时监控。
+这是几天前的监控录像，但同样是你的日常工作。每当你值白班的时候，布鲁斯就总能看到许多这样的监控——值夜班的时候看到的场景则像他今晚看到的实时监控。
 
-但说实话，布鲁斯对你的额外关注并不仅仅是因为假公济私，更重要的是你正如你的前任一样，对小丑表现出了相当的兴趣——虽然你的个性比哈莉要沉静的多，但是这种行为还是不可避免的引起了蝙蝠侠的警觉。
+但说实话，布鲁斯对你的额外关注确实并不仅仅是因为假公济私，更重要的是你正如你的前任一样，对小丑表现出了相当的兴趣——虽然你的个性比哈莉要沉静的多，但是这种行为还是不可避免的引起了蝙蝠侠的警觉。
 
 从最开始到现在，皆是如此。
 
@@ -506,7 +506,7 @@
 
 这件事是他在第二天晚上听戈登说的。
 
-“索恩医生递交了小丑的《刑事责任能力评估报告》，”gcpd的楼顶，戈登吐出一口烟圈——这位同样来自外地刚来哥谭没几年的年轻局长看起来有些疲惫，“她认为小丑的犯罪行为并非由精神疾病直接导致，而是出于清醒的犯罪意图——事实上，她在报告里指出小丑是aspd而非患有精神障碍……”
+“索恩医生递交了小丑的《刑事责任能力评估报告》，”gcpd的楼顶，戈登吐出一口烟圈——这位同样来自外地刚来哥谭的年轻局长看起来有些疲惫，“她认为小丑的犯罪行为并非由精神疾病直接导致，而是出于清醒的犯罪意图——事实上，她在报告里指出小丑是aspd而非患有精神障碍……”
 
 戈登剩下的话布鲁斯基本上没怎么听进去，他的注意力全都集中在前两句话上了，整个人仿佛被雷劈中了一般僵在原地。
 
@@ -554,7 +554,7 @@
 
 “她可能有危险。”布鲁斯兀自下了结论，显然这位年轻的富二代在某些时候还是很有些固执的。当然了，换个角度想，如果他不固执的话，哥谭的夜晚就不会出现一只飞来飞去的黑漆漆的大蝙蝠了。所以阿尔弗雷德最终也没阻拦，只是目送布鲁斯大步走向机库。
 
-蝙蝠翼悄无声息地划过哥谭的雨幕，降落在阿卡姆疯人院那标志性的、布满藤蔓和铁锈的滴水兽雕像旁的阴影里。布鲁斯，避开了所有监控和巡逻，精准地出现在你的办公室的窗外。他知道你刚结束一轮查房，此刻办公室内只有你一人。
+蝙蝠翼悄无声息地划过哥谭的雨幕，降落在阿卡姆疯人院那标志性的、布满藤蔓和铁锈的滴水兽雕像旁的阴影里。布鲁斯避开了所有监控和巡逻，精准地出现在你的办公室的窗外，他知道你刚结束一轮查房，此刻办公室内只有你一人。
 
 他无声地撬开并不严密的旧式窗栓，像一片没有重量的乌云滑入室内，落地时没有发出一丝声响。
 
@@ -562,7 +562,7 @@
 
 “……蝙蝠侠？”
 
-蝙蝠侠并没有第一时间说明来意，因为他在你的头顶看到了一个新的数字——蓝色的60%。很有趣的数字，根据他的经验，这应该是一个面对陌生人的、带着善意的数字——除了被他额外标记的数字之外，其他人的数字都是显示在头顶的，只要进入他的视野，他就能看到——同时出现两个数字并不是第一次，毕竟在不知道他秘密身份的情况下面对布鲁斯·韦恩和面对蝙蝠侠的态度有所不同很正常，戈登哈维皆是如此，区别在于两人的数字都在60/78左右，会根据情况上下浮动，前者是针对布鲁斯·韦恩的，后者是针对蝙蝠侠的——当然了，第二项数字一般都不高（第一项一般也不会高到哪里去），哈维和戈登已经是得分比较高的人了。
+蝙蝠侠并没有第一时间说明来意，因为他在你的头顶看到了一个新的数字——蓝色的60%。很有趣的数字，根据他的经验，这应该是一个面对陌生人的、带着善意的数字——除了被他额外标记的数字之外，其他人的数字都是显示在头顶的，只要进入他的视野，他就能看到——同时出现两个数字并不是第一次，毕竟在不知道他秘密身份的情况下面对布鲁斯·韦恩和面对蝙蝠侠的态度有所不同很正常，戈登哈维皆是如此，区别在于两人的数字都在60/78左右，会根据情况上下浮动，前者是针对布鲁斯·韦恩的，后者是针对蝙蝠侠的——当然了，第二项数字都不高（第一项一般也不会高到哪里去），哈维和戈登已经是得分比较高的人了。
 
 但很少有人和你一样，第一次见到蝙蝠侠，而且还是在自己的办公室被他闯入的情况下，就给出60这个其实相当高的分数的。
 
@@ -574,7 +574,7 @@
 
 ## Chapter 7
 
-他将注意力拉回，用变声器处理过的、低沉沙哑的声音开口，直奔主题：“关于小丑的报告。”
+短暂的思索后，蝙蝠侠将注意力拉回，用变声器处理过的、低沉沙哑的声音开口，直奔主题：“关于小丑的报告。”
 
 你挑了挑眉，那点惊讶转瞬即逝——蝙蝠侠知道你写的那份报告似乎也没什么奇怪的，毕竟你知道哈维和戈登和他有所合作。
 
@@ -626,90 +626,230 @@
 
 【Kathy：蝙蝠侠！活的！！！就是飞在天上的那个🦇！！！】
 
-……飞在天上的？
-
 【Kathy：他就那么突然出现在我背后，跟个鬼一样就飘进来了！天呐他是怎么做到这么无声无息的Σ( ° △ °|||)︴】
 
-跟个鬼一样……
+布鲁斯的指尖划过冰冷的屏幕，仿佛能触摸到你文字里传递出的那份混合着惊吓与新奇的情绪，只是他看到你描述他“像个鬼一样”的时候，嘴角几不可察地抽搐了一下。
 
 【Kathy：他是为那份小丑的报告来的。哇他竟然真的会看这个，我还以为他只会用拳头说话呢，至少警员们是这么说的ꉂ(ˊᗜˋ*)】
 
-看起来gcpd给他造了不少的谣呢。
-
 【Kathy：他听完了我的分析，虽然没说什么，但感觉他听进去了！最后还点了点头！≧∇≦】
 
-是的，他不仅听进去了他还打算再把那份报告看一遍……
+看到这里，布鲁斯的目光下意识地投向屏幕上那份报告。
 
 【Kathy：虽然非法闯入他人办公室这点真的很过分，但去掉这点不谈，他好像……也没那么吓人？甚至有点……嗯，怎么说，讲道理？～(￣▽￣～)~】
 
-……真的吗？你真的这么认为？
-
 【Kathy：更重要的是哥谭的都市传说居然是真的！而且他主动来找我了！这经历也太神奇了！(๑•̀ㅂ•́)و✧】
 
-……
+“没那么吓人”？
+
+“讲道理”？
+
+布鲁斯盯着这几个词，像是第一次认识它们。一股极其怪异的感觉涌上心头——他这几年来，听过无数关于蝙蝠侠的评价，恐惧的、憎恨的、敬畏的、可利用的……唯独没有“讲道理”“没那么吓人”这种句子。
+
+这个评价来自你。
+
+但除了对于蝙蝠侠的评价之外，之前那种微妙的感觉依然在心底翻涌，随着你对蝙蝠侠的每一句夸奖——至少是正面的评价——而更加尖锐。布鲁斯后知后觉的意识到他好像在嫉妒他自己，因为你夸赞了蝙蝠侠，所以……他在吃蝙蝠侠的醋。
+
+这简直荒谬透顶，各种意义上的。
 
 【Kathy：啊，这么晚了，你肯定睡了吧？抱歉抱歉，就是太惊讶了忍不住想跟你说说……晚安口牙 (●'◡'●)ﾉ♥】
 
-布鲁斯：……
+布鲁斯叹了口气，压下心底翻涌的情绪。他必须以布鲁斯·韦恩的方式回应你的消息，现在，或者之后的任何时间。
 
-你平时好像没有这么喜欢用表情包，所以他看得出来你今天的心情真的非常激动。
+他选择了现在。
 
-冰冷的空气涌入肺腑，试图压下那股翻腾的情绪。他必须回应，以布鲁斯·韦恩的方式——那个表面与蝙蝠侠水火不容的花花公子。
+【布鲁斯：亲爱的，你没事吧？那个黑漆漆的大蝙蝠没把你怎么样吧？你说他闯进了你办公室？我明天就让韦恩集团给阿卡姆升级最顶级的安保系统，保证那只蝙蝠再也飞不进去！】
 
-他手指在屏幕上飞快敲击，指尖带着一种刻意的、属于布鲁西宝贝的轻快力道：
+【布鲁斯：亲爱的，那家伙就是个披着披风的疯子，所以离他远点好吗？一定要非常、非常远！】
 
-【布鲁斯：甜心！！！】
+【布鲁斯：晚安，亲爱的，好好休息，别被噩梦吓到。】
 
-【布鲁斯：你没事吧？！那个黑漆漆的大蝙蝠没把你怎么样吧？！(╥﹏╥) 他闯进你办公室？！天呐！我明天就让韦恩集团给阿卡姆升级最顶级的安保系统！保证连只蝙蝠都飞不进去！】
+文字发送出去，布鲁斯盯着屏幕，想象着你看到这些夸张而轻佻的话语时的表情，虽然有些话他也知道说出去也没什么用，不过……
 
-【布鲁斯：他找你？为了小丑？哈！那个整天躲在阴影里、只会吓唬人的家伙懂什么心理诊断？他连自己的心理问题都搞不定吧！】
+还是得说，因为人设是这样的。
 
-【布鲁斯：讲道理？甜心，你一定是被他吓糊涂了！那家伙就是个披着披风的疯子！离他远点！非常、非常远！】
+布鲁斯·韦恩给阿卡姆升级安保系统拦截蝙蝠侠，笑死。
 
-【布鲁斯：不过……他居然会去找你？啧，看来我们凯瑟琳医生的魅力连哥谭的怪物都抵挡不住啊？(｡♥‿♥｡)晚安，亲爱的，好好休息，别被噩梦吓到。】
+几秒后，你的回复再度出现在了屏幕上。
 
-文字发送出去，布鲁斯盯着屏幕，想象着你看到这些夸张、轻佻、充满对蝙蝠侠贬低的话语时的表情。他需要维持这个形象，虽然有些话他也知道说出去也没什么用，不过……
+【Kathy：亲爱的，还没睡吗？早点休息。不过我知道你很讨厌那只黑漆漆的大蝙蝠，但他没有你说的那么坏了，而且真的挺讲道理的，嗯……可能比某个总是半路放我鸽子的富二代讲道理？ᕕ( ᐛ )ᕗ】
 
-还是得说。
+【Kathy：开个玩笑啦，你也很讲道理。晚安宝贝，我要继续值班去了😘】
 
-布鲁斯·韦恩给阿卡姆升级安保系统拦截蝙蝠侠，这话听起来不太像是英文。
+布鲁斯盯着你发来的消息。
+
+“比某个总是半路放我鸽子的富二代讲道理”……难道蝙蝠侠就没有放你鸽子吗？他不无怨念的想着，全然不顾不管是哪个身份本质上都是他在放你鸽子的这个事实。
 
 “看来索恩小姐度过了一个相当……刺激的夜晚？”阿尔弗雷德的声音带着一丝不易察觉的笑意，如同鬼魅般在他身后响起。
 
-布鲁斯没有回头，身体却几不可察地僵硬了一下。他不用看也知道，老管家此刻必然是双手交叠放在身前，站姿笔挺，嘴角噙着那抹洞悉一切的、优雅又促狭的微笑。
+布鲁斯没有回头，身体却几不可察地僵硬了一下。
 
 “阿尔弗雷德。”布鲁斯的声音有些生硬。
 
-“而且，听索恩小姐的描述，”阿尔弗雷德缓步上前，将一杯新的、冒着热气的饮品轻轻放在操作台边缘，动作优雅得如同在布置下午茶，“这位‘黑漆漆的大蝙蝠’，似乎给她的印象……还不算太糟？”他刻意加重了“黑漆漆的大蝙蝠”这几个字，模仿着布鲁斯刚才短信里的夸张语气。
+阿尔弗雷德缓步上前，将一杯新的、冒着热气的饮品轻轻放在操作台边缘，动作优雅得如同在布置下午茶：“看起来，这位‘黑漆漆的大蝙蝠’，似乎给她的印象……还不算太糟？”
 
-布鲁斯的目光扫过那杯饮品——是热可可，不是牛奶，也不是咖啡。阿尔弗雷德今晚的“体贴”有点不同寻常。
+他刻意加重了“黑漆漆的大蝙蝠”这几个字。
 
-“她只是被吓到了，胡言乱语而已。”布鲁斯拿起杯子，滚烫的杯壁熨帖着他微凉的指尖，“那家伙就是个麻烦，只会带来麻烦。”他啜饮了一口，浓郁香甜的可可味在口腔里弥漫开，却无法驱散他心头的烦躁。
+布鲁斯的目光扫过那杯饮品——是热可可，不是牛奶，也不是咖啡。
 
-阿尔弗雷德没有反驳，只是微微颔首，目光状似无意地扫过布鲁斯放在操作台上的手机屏幕——屏幕还亮着，停留在你最后那条带着颜文字的兴奋消息上。他的眼神在“讲道理”三个字上停留了一瞬，眼底的笑意更深了。
+“她只是被吓到了。”布鲁斯拿起杯子抵到唇上，浓郁香甜的可可味在口腔里弥漫开，却无法驱散他心头的烦躁。
 
-“或许吧，老爷。”阿尔弗雷德的声音平稳依旧，却像一根精准的羽毛，再次搔到了布鲁斯心底最痒的地方，“不过，能让索恩小姐在经历‘非法闯入’后，还觉得对方‘没那么吓人’甚至‘讲道理’……这位蝙蝠侠先生，看来在某些方面，确实‘抢了布鲁斯·韦恩的风头’呢。”
+阿尔弗雷德没有反驳，只是微微颔首，目光状似无意地扫过布鲁斯放在操作台上的手机屏幕——屏幕还亮着，你发送的最后几条条消息依然停留在那里。他的眼神在“讲道理”这个词上停留了一瞬，眼底的笑意更深了。
 
-布鲁斯握着杯子的手猛地一紧，滚烫的液体差点溅出来。他猛地抬头看向阿尔弗雷德。
+“或许吧，老爷。”阿尔弗雷德的声音平稳依旧，“不过，能让索恩小姐在经历‘非法闯入’后，还觉得对方‘没那么吓人’甚至‘讲道理’……这位蝙蝠侠先生，看来在某些方面，确实‘抢了布鲁斯·韦恩的风头’呢。”
 
-老管家已经优雅地转过身，仿佛只是陈述了一个再平常不过的事实，朝着升降梯的方向走去。“夜还很长，老爷。您的热可可，希望有助于您平复……嗯，‘蝙蝠侠带来的困扰’。”
+布鲁斯握着杯子的手猛地一紧，滚烫的液体差点溅出来。
+
+他猛地抬头看向阿尔弗雷德，但老管家已经优雅地转过身，仿佛只是陈述了一个再平常不过的事实，朝着升降梯的方向走去：“夜还很长，老爷。希望热可可有助于您平复……嗯，‘蝙蝠侠带来的困扰’。”
 
 布鲁斯：“……”
 
-他看着阿尔弗雷德消失在升降梯口，蝙蝠洞里只剩下他和机器的嗡鸣。他低头，看着手机屏幕上你最后那条消息，又看看视野里那个刺眼的、蓝色的65%。再看看自己刚刚发出的、充满了对蝙蝠侠不屑和贬低的信息。
+阿尔弗雷德绝对知道了什么。
 
-一种前所未有的荒谬感和无力感席卷了他。他扮演着两个截然相反的角色，一个被你评价为“讲道理”，另一个却要拼命地诋毁前者以维持人设……而这两个角色，都是他。
+他看着阿尔弗雷德消失在升降梯口，蝙蝠洞里只剩下他和机器的嗡鸣。他低头，看着手机屏幕上你最后那条消息，又看看视野里那个刺眼的、蓝色的65%。
 
 他烦躁地放下杯子，手指插进汗湿的额发。手机屏幕暗了下去，但你的文字，你的兴奋，你对“另一个他”的评价，还有阿尔弗雷德那句意味深长的“抢了风头”，像魔咒一样在他脑海里盘旋。
 
-他需要出去透透气。不，他需要夜巡。他需要找到一个实实在在的、可以用拳头解决的麻烦。他站起身，动作带着一丝他自己都没察觉的僵硬和……狼狈？他重新拿起那沉重的头盔，冰冷的触感让他混乱的思绪稍微清醒了一些。
+他需要出去透透气，他需要夜巡。他需要找到一个实实在在的、可以简单解决的麻烦，至少比收拾自己的情绪要简单的麻烦。他站起身，重新拿起那沉重的头盔，冰冷的触感让他混乱的思绪稍微清醒了一些。
 
-哥谭的雨夜还在继续。蝙蝠车再次咆哮着冲出洞穴，冲向那片被罪恶浸染的黑暗。引擎的轰鸣声震耳欲聋，撕裂雨幕，试图掩盖他心底那份因为一条条短信和一个65%的好感度而掀起的、无声的风暴。
-
-他需要证明，布鲁斯·韦恩才是你眼中唯一的那个存在。
-
-视野左下角，那个红色的85%依旧稳稳地亮着，像一盏遥远却固执的灯塔。而那个蓝色的65%，则像一个无声的提醒，提醒着他身份割裂带来的、前所未有的混乱。
+哥谭的雨夜还在继续。蝙蝠车再次咆哮着冲出洞穴，冲向那片被罪恶浸染的黑暗。
 
 🦇🦇🦇(◣_◢)🦇🦇🦇
 
-关于表情包和颜文字的问题，其实凯瑟琳是发的表情包，她直接把表情包当逗号用了，但我没法真的把表情包插进ob，所以用颜文字代替了。
+不知道为什么塞了个很怪的自己吃自己的醋的桥段进去，但这个桥段好好玩啊……
+
+## Chapter 8
+
+凌晨两点二十八分，一个很适合在卫生间的镜子前面玩招鬼游戏但不适合在哥谭纷繁复杂的小巷中独自穿行的时间点——前者显然比后者安全多了，而当你居住在哥谭的时候，两者的差异尤其明显。
+
+一般来说你不会在这个点出门，但今天确实是个例外，主要是韦恩集团确实爽快的答应了出资赞助阿卡姆的装修，阿卡姆的雇员们一致认为这是你的功劳，而小丑的刑责能力评估报告则进展喜人，戈登局长和哈维·丹特显然在其中出了不少力气。虽然黑门监狱好像有点意见，但不管是你、哈维还是戈登显然都懒得搭理黑门监狱在想什么，反正这对于阿卡姆来说是好事。
+
+双喜临门，阿卡姆几个关系近的同事拉着你庆祝，气氛热烈得没收住脚，散场时已是现在。当然了，哥谭的治安也不至于差到半夜走在热闹的大街上都能被抢劫的程度，哥谭最大的问题一直都是它的“特产”，以及那些偏僻的小巷。
+
+比如你现在待的这条。
+
+脚步声从巷口传来，不止一个，沉重、拖沓，带着喝醉后的踉跄。啊，醉鬼——你不动声色地放缓了步子，手悄然探进外套口袋，握住了那支随身携带的强效催泪喷雾。
+
+两个高大的身影堵在了巷子的出口，摇摇晃晃地逼近，劣质酒精的气息扑面而来。一个穿着脏兮兮的工装外套，另一个套着件褪色的连帽衫，帽檐压得很低，但露出的眼神浑浊，闪烁着贪婪以及酒精催生的愚蠢勇气。
+
+“嘿，美女……”穿工装外套的人咧开嘴，露出黄牙，“这么晚了，一个人啊？多危险。”
+
+嗯，危险源本人说这话真是很有说服力呢。
+
+你向后撤了半步，离墙稍近了些，确保不会被前后夹击。
+
+“确实有点晚，”你的声音平静，听不出一丝慌乱，甚至带了点职业性的温和，“不过，我习惯走这条路回家。麻烦让一下？”
+
+穿连帽衫的人嗤笑一声，往前又逼了一步。
+
+“回家？急什么？哥谭的夜生活才刚开始呢。你看……我们哥俩手头有点紧，美女你这么漂亮，肯定不缺钱，借点花花？”他的手已经摸向了鼓囊囊的后腰，动作笨拙地掏出一把弹簧刀。“啪嗒”一声，刀刃弹出，在昏暗的光线下反射着一点寒芒，“我看你的表就不错……”
+
+确实——这表的设计精致大方，也是你为数不多会随身携带的、近似于“首饰”的东西，一方面是因为这表确实好看，另一方面是因为这是布鲁斯送的，布鲁斯别的不提审美是真好，啊，韦恩家的余裕。
+
+看起来这俩人还挺有眼光的，你如此想，带着点漫不经心。
+
+“怎么样？痛快点！”工装外套也逼近了，贪婪的目光在你身上扫视。
+
+你深吸一口气——徒手放倒这两个醉醺醺的货色对你来说不算难事，毕竟你为了留在哥谭也是很努力的。所以说哥谭确实是一座不同寻常的城市，这要是在大都会的话这时候应该只需要大喊超人……
+
+哦，大都会好像不会遇到这种事。
+
+你掂量着喷雾，肌肉在放松的姿态下悄然绷紧，像一张引而不发的弓。
+
+“听着，”你的声音平稳，甚至带上了一丝劝诫的味道，像是在安抚阿卡姆里躁动的病人，“你们喝多了，现在做的事很不明智。把刀收起来，转身离开，我就当什么都没发生过。否则，后果你们承担不起。”
+
+工装外套愣了一下，似乎被你过于冷静的态度唬住了一瞬。但连帽衫此时已经酒精上头，显然更莽撞，他晃了晃手里的刀，口齿不清地叫嚣：“少TM废话！把钱交出来！还有……还有你这表！”
+
+他作势就要扑上来，你眼神一凝，指尖已经扣在了喷雾的扳机上，重心下沉——
+
+呼！
+
+千钧一发的时刻，一股强劲到令人窒息的风压毫无预兆地从天而降，仿佛有巨大的黑色翅膀猛然扇动，卷起地上的灰尘和碎纸片打着旋儿飞散，紧接着，昏黄的路灯光线被一个庞大、嶙峋的阴影彻底吞噬，映在地面上的影子似乎都带上了棱角。
+
+……哦，好像确实有。
+
+时间仿佛凝固在了这里，两个醉汉的动作僵在半空，惊恐地抬头，在看清来人是谁——或者说，在看清“来的是什么生物”之后，他手里的弹簧刀“当啷”一声掉在地上。
+
+——蝙蝠侠。
+
+他就那样无声无息地矗立在你、两个和巷口之间，像一尊从哥谭最深的噩梦里直接降临的黑色石像，巨大的披风垂落，在地面上铺开一片不祥的阴影。那双隐藏在白色目镜后的眼睛，冰冷地锁定着两个呆若木鸡的劫匪，散发出的压迫感让空气都粘稠得无法呼吸。
+
+你挑了挑眉，后退半步，半倚在墙上。
+
+“呃啊！”连帽衫发出一声仿佛被掐住脖子般的惊叫，酒瞬间醒了大半，转身就想跑，但蝙蝠侠甚至没给他们完整转身的机会。你只捕捉到一闪而过的黑影，以及听到两声沉闷的撞击声，像沙袋被重拳击中。随后工装外套便像个破麻袋一样被甩到墙上，闷哼一声滑落，蜷缩着不动了。连帽衫则被一只覆盖着装甲的手扼住喉咙，双脚离地，徒劳地蹬踹着，眼珠因窒息和恐惧而暴突。
+
+你看着蝙蝠侠在几秒后将他像扔垃圾一样甩在工装外套旁边，很……精准的手法，再多掐一会他的大脑可能就会因为缺氧而造成不可逆的损伤，但是蝙蝠侠在这之前就把他扔下了。这印证了你的一个猜测——从不杀人的蝙蝠侠最了解的事情一定是杀人，否则他不可能做到不杀人。
+
+两人堆叠在一起，只剩下痛苦的呻吟和粗重的喘息。
+
+但这只是个小问题，真正的问题还在后面。
+
+你看着那两团在地上蠕动的人形垃圾，又抬眼看向那个高大的黑色身影。他和你那日在办公室里看到他时几无二致，毕竟蝙蝠怪好像确实也很难发生什么变化，只是在灯光昏暗的地方，他看起来更有压迫感了一些。
+
+问题是他来得也太快了，事实上，快得离谱。
+
+从你遇到这两个醉汉，到蝙蝠侠出现，最多不过两三分钟的时间。
+
+蝙蝠侠正好在附近夜巡？不是没可能。但哥谭这么大，蝙蝠侠正好在附近的概率有多高？
+
+蝙蝠侠特别关注你？更有可能，但再怎么关注也不可能时时刻刻在你附近，这不符合他的行事作风……至少不符合你打听到的他的行事作风。
+
+蝙蝠侠似乎是直到确认了两人暂时失去了威胁能力，这才侧过身来，白色的目镜转向你，不带任何情绪地扫过你全身，那种冰冷的漠然让你又挑了挑眉毛。
+
+上次他可不是这幅样子。
+
+“看起来蝙蝠侠先生今天心情不太好？”你问。
+
+“报警。”
+
+他没回答你的问题，只是吐出了这么个词。话音刚落，巨大的黑色披风猛地扬起，裹挟着冰冷的雨气和夜风。他像来时一样突兀，身形拔地而起，轻盈得不可思议，瞬间就消失在巷子上方参差不齐的建筑轮廓线后，融入哥谭沉沉的雨幕和霓虹光晕之中，仿佛从未出现过。
+
+巷子里只剩下你和地上两个哼哼唧唧的废物。
+
+“看起来心情是不太好。”你摇摇头，掏出手机拨通了gcpd的报警电话，冷静地报出位置和情况。挂断电话后，你瞥了一眼地上那两个被恐惧彻底压垮、连呻吟都不敢大声的家伙，绕过他们，走到巷口等待警方的到来。
+
+而在离你不远的、更高处的阴影里，蝙蝠侠正站在那里，耳麦里传来警笛的声音，以及你与戈登的对话——这种小事居然能让戈登亲至，你的身份和你交的报告在其中显然起了不小的作用，而且这件事证明了两件事，第一就是戈登确实敬业，第二就是哥谭今晚很太平，没什么大事发生。
+
+“蝙蝠侠也来了，”耳麦里传来你补充的一些细节问题，“但他今晚看起来心情不不太好。”
+
+“您居然还能看出来他心情不太好？”其中一位警员震惊地询问。
+
+“并不困难。”你似乎是笑了一下，但是没延伸这个话题。戈登的声音紧接着响起：“他这几天的心情都不是很好。”
+
+“……局长，您又是怎么看出来的？”
+
+“你没发现他最近揍人的力道都变大了吗？”戈登这话说的笃定，“而且下手贼利落，那些混混最近都被他吓得不敢犯浑了。”
+
+“……”
+
+蝙蝠侠面无表情的切换了频道，阿尔弗雷德那优雅的英式腔调重新响起：“老爷，我以为您会再听一会索恩小姐的笔录。”
+
+“只是确保她的安全。”布鲁斯的语气有点生硬。
+
+“那么您还要继续夜巡？”
+
+“当然。”
+
+当然了，蝙蝠侠的夜巡不会因为这件事就停下，阿尔弗雷德也知道此事。但至少他愿意为了你暂停片刻，这就已经足够让老管家欣慰。
+
+
+
+🦇🦇🦇(◣_◢)🦇🦇🦇
+
+其实说起哥谭治安，哥谭治安我觉得其实不错，只是特产太出名了，主要是最近闲来无事又开始玩一个小黄油，对比一下那个游戏里的城市设定的话，哥谭那简直是人间天堂……
+
+……等会，好像有哪儿不对.jpg
+
+顺带一提虽然百特曼出场很有压迫感，但我脑子里的场景完全就是：
+
+![lofter_1736986711305.jpg](/img/user/00%20%E8%8D%89%E7%A8%BF%E7%AE%B1/%E9%99%84%E4%BB%B6/lofter_1736986711305.jpg)
+
+嘿嘿可爱的大猫猫！
+
+写到这段想起来之前在知乎看到的一个段子，是这样的：
+
+阿福忠于蝙蝠侠布鲁斯韦恩 ×
+
+阿福的从小照顾的亲人布鲁斯韦恩被一个叫蝙蝠侠的神经病绑架了，阿福为了保护亲人不得不和神经病蝙蝠侠合作 √
+
+阿福布鲁斯基本就是相父阿斗的同位异形体，不同在于阿福的目标是让布鲁斯过上阿斗的乐不思蜀生活，奈何布鲁斯阿斗的人生目标是燃烧在北伐兴复汉室（哥谭）的路上直至死亡。
