Published multiple files

--- a/src/site/notes/00 草稿箱/【蝙蝠乙女】当蝙蝠侠能看到你对他的好感度-2.md
+++ b/src/site/notes/00 草稿箱/【蝙蝠乙女】当蝙蝠侠能看到你对他的好感度-2.md
@@ -809,7 +809,7 @@
 
 “看起来心情是不太好。”你摇摇头，掏出手机拨通了gcpd的报警电话，冷静地报出位置和情况。挂断电话后，你瞥了一眼地上那两个被恐惧彻底压垮、连呻吟都不敢大声的家伙，绕过他们，走到巷口等待警方的到来。
 
-而在离你不远的、更高处的阴影里，蝙蝠侠正站在那里，耳麦里传来警笛的声音，以及你与戈登的对话——这种小事居然能让戈登亲至，你的身份和你交的报告在其中显然起了不小的作用，而且这件事证明了两件事，第一就是戈登确实敬业，第二就是哥谭今晚很太平，没什么大事发生。
+而在离你不远的、更高处的阴影里，蝙蝠侠正站在那里，耳麦里传来警笛的声音，以及你与戈登的对话——这种小事居然能让戈登亲至，你的身份和你交的报告在其中显然起了不小的作用，而且这证明了两件事，第一就是戈登确实敬业，第二就是哥谭今晚很太平，没什么大事发生。
 
 “蝙蝠侠也来了，”耳麦里传来你补充的一些细节问题，“但他今晚看起来心情不不太好。”
 
@@ -831,13 +831,21 @@
 
 “当然。”
 
-当然了，蝙蝠侠的夜巡不会因为这件事就停下，阿尔弗雷德也知道此事。但至少他愿意为了你暂停片刻，这就已经足够让老管家欣慰。
+当然了，蝙蝠侠的夜巡不会因为这件事就停下，阿尔弗雷德也知道此事。但至少他愿意为了你而暂停片刻，这就已经足够让老管家欣慰。
+
+不过目前的你对此一无所知，你只是配合着警方完成了笔录，在回家的后半段路上思绪再度飘到了之前的念头上。
+
+这是个巧合吗？有可能。
+
+但如果不是呢？
+
+这条巷子很偏僻而且事发突然，蝙蝠侠是哥谭的守护者，但他不是神。
+
+除非……
+
+你的目光再次落在了腕表上，一块布鲁斯送你的、你非常喜欢的表，一个猜测隐隐约约的浮现出来。
 
 🦇🦇🦇(◣_◢)🦇🦇🦇
-
-其实说起哥谭治安，哥谭治安我觉得其实不错，只是特产太出名了，主要是最近闲来无事又开始玩一个小黄油，对比一下那个游戏里的城市设定的话，哥谭那简直是人间天堂……
-
-……等会，好像有哪儿不对.jpg
 
 顺带一提虽然百特曼出场很有压迫感，但我脑子里的场景完全就是：
 
@@ -852,3 +860,15 @@
 阿福的从小照顾的亲人布鲁斯韦恩被一个叫蝙蝠侠的神经病绑架了，阿福为了保护亲人不得不和神经病蝙蝠侠合作 √
 
 阿福布鲁斯基本就是相父阿斗的同位异形体，不同在于阿福的目标是让布鲁斯过上阿斗的乐不思蜀生活，奈何布鲁斯阿斗的人生目标是燃烧在北伐兴复汉室（哥谭）的路上直至死亡。
+
+## Chapter 9
+
+如果说布鲁斯最近这几天最大的未解之谜是什么，那肯定不是从阿卡姆跑路的谜语人现在人在哪里——尼格玛这个人是真的有精神问题，不管他现在人在哪里，过段时间他总是会自己再冒出来的，更何况谜语人还算不上一个大麻烦，毕竟一个真正的精神病人的威胁显然也不及小丑那种虫豸。
+
+说到小丑，小丑目前已经被转送去黑门监狱，至于说死刑问题……新泽西州州议会对于这件事分歧很大，支持方和反对方都有很多理由，而考虑到这是个蓝州，这一次的支持派的数量出乎意料的多，两院支持者的总人数都超过了三分之一。
+
+是这样的，这群州议会议员有大概三分之二对小丑深恶痛绝，毕竟他的存在真的能威胁到国会里的这群老爷，剩下三分之一里面也确实有一些真·圣母，剩下的就不好说是什么了，反正不太拟人。但问题在于，即使是这三分之二的人里面也有一半是不支持恢复死刑的，原因很简单——其中一部分是本来就支持废除死刑，另外一部分是认为因为小丑而恢复死刑违宪，还有一些不太拟人，这都不说了。当然了另外那三分之一也不是都支持死刑的，支持死刑的是大部分，但还有一些人是因为对小丑深恶痛绝到可以转变自己的政治立场——啊，小丑。
+
+不过不管议员的政治立场如何吧，三分之一的数量显然是不够支持恢复死刑的。更何况新泽西州现在是个蓝州，州长本人是民主党籍废死派，这就导致在法律上判处小丑死刑目前在新泽西州看起来是一件遥遥无期的事情。对这件事哥谭人民反正也已经习惯了，反正小丑死不死的对大多数人来说影响不大，只要小丑别再出来霍霍人就行。
+
+什么？你说会不会有受害者家属一怒之下行荆轲故事？那废话肯定有啊，问题是截至目前为止没有一个成功的。
